tests/ui/object-lifetime/object-lifetime-default-gat-binding.stderr
error[E0228]: the lifetime bound for this object type cannot be deduced from context; please supply an explicit bound
  --> $DIR/object-lifetime-default-gat-binding.rs:17:35
   |
LL |     fn g<'r>(_: impl Outer<Ty<'r, dyn Inner> = ()>) {}
   |                                   ^^^^^^^^^

error[E0228]: the lifetime bound for this object type cannot be deduced from context; please supply an explicit bound
  --> $DIR/object-lifetime-default-gat-binding.rs:30:35
   |
LL |     fn g<'r>(_: impl Outer<'r, Ty<dyn Inner> = ()>) {}
   |                                   ^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0228`.
